--- a/BeegProject/web/css/site.css
+++ b/BeegProject/web/css/site.css
@@ -32,10 +32,10 @@ and open the template in the editor.
     border: solid 3px black;
     border-radius: 15px;
     flex-direction: column;
-     justify-content: center;
+    justify-content: center;
     height:400px;
     padding-bottom: 10px;
-     margin: auto;
+    margin: auto;
 }
 .laptopImg{
     align-self: center;
@@ -53,7 +53,7 @@ and open the template in the editor.
     border: 2px solid black;
     border-radius: 20px;
     margin:20px;
-    
+
 }
 .detail img{
     display: block;
@@ -68,21 +68,74 @@ and open the template in the editor.
     padding: 10px;
     align-items: center;
 }
- .logo {
-        max-width: 180px;
-        height: auto;
-    }
-    .card {
-        transition: transform 0.3s;
-    }
-    .card:hover {
-        transform: scale(1.05);
-    }
-    .btn-primary {
-        background-color: #007bff;
-        border: none;
-    }
-    .btn-primary:hover {
-        background-color: #0056b3;
-    }
-    
+.logo {
+    max-width: 300px;
+    height: auto;
+    padding-left: 30px;
+}
+.card {
+    transition: transform 0.3s;
+}
+.card:hover {
+    transform: scale(1.05);
+}
+.btn-primary {
+    background-color: #007bff;
+    border: none;
+}
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+.search-bar {
+    background-color: black;
+    color: white;
+    padding: 8px 12px;
+    font-size: 16px;
+    outline: none;
+}
+.search-bar input{
+    background-color: black;
+    color:white;
+    border: 2px solid white;
+}
+.search-bar input:focus {
+    background-color: black;
+    color: white; 
+    border-color: white;
+}
+
+.search-bar input::placeholder{
+    color:lightgray;
+}
+
+.search-button {
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+    padding: 8px 12px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.search-button:hover {
+    background-color: white;
+    color: black;
+}
+
+.btn-white {
+    color: white; 
+    border: 2px solid white !important; 
+    width: 50px; 
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+.btn-white:hover {
+    background-color: white !important;
+    color: black !important; /* Invert colors on hover */
+}
