--- a/BeegProject/web/css/site.css
+++ b/BeegProject/web/css/site.css
@@ -59,15 +59,7 @@ and open the template in the editor.
     display: block;
     margin:0 auto;
 }
-.laptopDetail{
-    border-left: 2px solid black;
-    font-size: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10px;
-    align-items: center;
-}
+
 .logo {
     max-width: 300px;
     height: auto;
@@ -141,6 +133,85 @@ and open the template in the editor.
 }
 
 
+.laptop-manage-container {
+    background-color: #1e1e2f;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.header-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.header-bar h2 {
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.custom-table {
+    width: 100%;
+    background-color: #2a2a3a;
+    border-radius: 10px;
+    overflow: hidden;
+    color: white;
+}
+
+.custom-table th {
+    background-color: #444;
+    color: white;
+    padding: 12px;
+    text-transform: uppercase;
+}
+
+.custom-table tbody tr:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.custom-table td {
+    padding: 10px;
+    border-bottom: 1px solid #444;
+}
+
+.laptop-thumbnail {
+    width: 60px;
+    height: auto;
+    border-radius: 5px;
+    transition: transform 0.2s;
+}
+
+.laptop-thumbnail:hover {
+    transform: scale(1.1);
+}
+.price{
+    white-space: nowrap;
+}
+.result {
+    margin-top: 20px;
+    padding: 15px;
+    background: #e9ecef;
+    border-radius: 5px;
+}
+.result h2 {
+    color: #28a745;
+    font-size: 20px;
+}
+.revenue-body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+}
+
 
 /* Ảnh sản phẩm */
 .product-image {
@@ -167,4 +238,6 @@ and open the template in the editor.
 .btn-success:hover {
     background-color: #218838;
 }
+
+
 
